<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/scu__defaultBackground"
    android:orientation="vertical" >

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="48dp"
        android:background="@color/scu__defaultMianTitle"
        android:gravity="center_vertical"
        android:orientation="horizontal" >

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="left"
            android:orientation="vertical" >

            <LinearLayout
                android:id="@+id/Btn_Change_Password_Back"
                android:layout_width="48dp"
                android:layout_height="48dp"
                android:background="@drawable/btn_main_head"
                android:clickable="true"
                android:gravity="center_vertical|center_horizontal"
                android:orientation="vertical" >

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:background="@drawable/ic_action_back"
                    android:gravity="center_vertical" >
                </LinearLayout>
            </LinearLayout>
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:gravity="center_vertical|center_horizontal"
            android:orientation="vertical" >

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:gravity="center_horizontal|center_vertical"
                android:orientation="vertical" >

                <TextView
                    android:id="@+id/Text_Change_Password_Title"
                    style="@style/TitleBarText"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/personal_change_passwd_title"
                    android:textSize="24sp" />
            </LinearLayout>
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:layout_alignParentTop="true"
            android:gravity="right"
            android:orientation="vertical" >

            <LinearLayout
                android:id="@+id/Btn_Change_Password_Refresh"
                android:layout_width="48dp"
                android:layout_height="48dp"
                android:background="@drawable/btn_main_head"
                android:clickable="true"
                android:gravity="center_vertical|center_horizontal"
                android:orientation="vertical" >

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:background="@drawable/ic_action_refresh"
                    android:gravity="center_vertical|center_horizontal" >
                </LinearLayout>
            </LinearLayout>
        </LinearLayout>
    </RelativeLayout>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="0.82"
        android:orientation="vertical" >

         <EditText
            android:id="@+id/edittext_change_password_oldpasswd"
            style="@style/my_edittext_style_change_password"
            android:layout_width="280dp"
            android:layout_height="45dp"
            android:layout_alignParentTop="true"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="28dp"
            android:ems="10" 
            android:inputType="textPassword">
            <requestFocus />
            </EditText>
            
        <EditText
            android:id="@+id/edittext_change_password_newpasswd1"
            style="@style/my_edittext_style_change_password"
            android:layout_below="@+id/edittext_change_password_oldpasswd"
            android:layout_width="280dp"
            android:layout_height="45dp"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="1dp"
            android:ems="10"
            android:inputType="textPassword" />


        <EditText
            android:id="@+id/edittext_change_password_newpasswd2"
            style="@style/my_edittext_style_change_password"
            android:layout_below="@+id/edittext_change_password_newpasswd1"
            android:layout_width="280dp"
            android:layout_height="45dp"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="1dp"
            android:ems="10"
            android:inputType="textPassword" />

        <Button
            android:id="@+id/button_change_password_submit"
            android:layout_below="@+id/edittext_change_password_newpasswd2"
            android:layout_width="200dp"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="10dp"
            android:background="@drawable/btn_login"
            android:textColor="@color/scu__defaultLoginText"
            android:text="@string/personal_change_passwd_submit" />

        <TextView
            android:id="@+id/textView1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignBottom="@+id/edittext_change_password_oldpasswd"
            android:layout_alignLeft="@+id/edittext_change_password_oldpasswd"
            android:layout_alignBaseline="@+id/edittext_change_password_oldpasswd"
            android:layout_marginLeft="12dp"
            android:textSize="16sp"
            android:text="@string/personal_change_passwd_oldpasswd" />

        <TextView
            android:id="@+id/textView2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignBottom="@+id/edittext_change_password_newpasswd1"
            android:layout_alignLeft="@+id/edittext_change_password_newpasswd1"
            android:layout_alignBaseline="@+id/edittext_change_password_newpasswd1"
            android:layout_marginLeft="12dp"
            android:textSize="16sp"
            android:text="@string/personal_change_passwd_newpasswd1" />

        <TextView
            android:id="@+id/textView3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignBottom="@+id/edittext_change_password_newpasswd2"
            android:layout_alignLeft="@+id/edittext_change_password_newpasswd2"
            android:layout_alignBaseline="@+id/edittext_change_password_newpasswd2"
            android:layout_marginLeft="12dp"
            android:textSize="16sp"
            android:text="@string/personal_change_passwd_newpasswd2" />

    </RelativeLayout>

</LinearLayout>