<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/bg_login"
    android:orientation="vertical" >

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="5"
        android:orientation="vertical" >

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="5" >
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1" >

            <ImageView
                android:id="@+id/logo_imageView"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:src="@drawable/logo_login" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="2" >
        </LinearLayout>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="3" >

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_weight="1" >
        </LinearLayout>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:orientation="vertical" >

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1" >

                <EditText
                    android:id="@+id/EditText_Login_Num"
                    style="@style/my_edittext_style"
                    android:layout_width="250dp"
                    android:layout_height="50dp"
                    android:layout_centerInParent="true"
                    android:hint="@string/login_input_usr"
                    android:maxLength="15"
                    android:maxLines="1" >

                    <requestFocus />
                </EditText>

                <ImageView
                    android:id="@+id/usr_imageView"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignBottom="@+id/EditText_Login_Num"
                    android:layout_alignLeft="@+id/EditText_Login_Num"
                    android:layout_alignTop="@+id/EditText_Login_Num"
                    android:layout_marginLeft="8dp"
                    android:src="@drawable/usrlogo_login" />
            </RelativeLayout>

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1" >

                <EditText
                    android:id="@+id/EditText_Login_Passwd"
                    style="@style/my_edittext_style"
                    android:layout_width="250dp"
                    android:layout_height="50dp"
                    android:layout_centerInParent="true"
                    android:layout_marginTop="5dp"
                    android:hint="@string/login_input_pswd"
                    android:inputType="textPassword"
                    android:maxLength="20" >
                </EditText>

                <ImageView
                    android:id="@+id/pswd_imageView"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignBottom="@+id/EditText_Login_Passwd"
                    android:layout_alignLeft="@+id/EditText_Login_Passwd"
                    android:layout_alignTop="@+id/EditText_Login_Passwd"
                    android:layout_marginLeft="10dp"
                    android:src="@drawable/pswdlogo_login" />
            </RelativeLayout>

            <Button
                android:id="@+id/Button_Login_Login"
                android:layout_width="match_parent"
                android:layout_height="35dp"
                android:layout_marginLeft="12dp"
                android:layout_marginRight="12dp"
                android:layout_marginTop="10dp"
                android:layout_weight="7"
                android:background="@drawable/btn_login"
                android:text="@string/login_input_login"
                android:textColor="@color/scu__defaultLoginText"
                android:textSize="20sp" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_weight="1" >
        </LinearLayout>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="6" >

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_weight="1" >
        </LinearLayout>

        <RelativeLayout
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_weight="2" >

            <CheckBox
                android:id="@+id/CheckBox_Login_Auto"
                style="@style/MyCheckBox"
                android:layout_width="90dp"
                android:layout_height="31dp"
                android:layout_marginLeft="43dp"
                android:layout_marginTop="25dp" />

            <CheckBox
                android:id="@+id/CheckBox_Login_Passwd"
                style="@style/MyCheckBox"
                android:layout_width="90dp"
                android:layout_height="31dp"
                android:layout_alignBaseline="@+id/CheckBox_Login_Auto"
                android:layout_marginLeft="52dp"
                android:layout_toRightOf="@+id/CheckBox_Login_Auto"
                android:checked="true" />

            <TextView
                android:id="@+id/textView1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignLeft="@+id/CheckBox_Login_Auto"
                android:layout_below="@+id/CheckBox_Login_Auto"
                android:layout_marginLeft="5dp"
                android:text="@string/login_input_autologin" 
                style="@style/LoginLabelText" />

            <TextView
                android:id="@+id/textView2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignBaseline="@+id/textView1"
                android:layout_alignBottom="@+id/textView1"
                android:layout_alignLeft="@+id/CheckBox_Login_Passwd"
                android:layout_marginLeft="5dp"
                android:text="@string/login_input_savepswd" 
                style="@style/LoginLabelText" />
        </RelativeLayout>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_weight="1" >
        </LinearLayout>
    </LinearLayout>

</LinearLayout>